# extract_data_from_bag

./: CMakeLists.txt  ReadMe.md  package.xml
src/: data_record_to_bag.cc  extract_feynman_data_from_bag.cc  extract_realsense_data_from_bag.cc
